feat: Enhance PWA and add manifest details
Adds PWA capability with standalone display and portrait orientation.
Updates manifest with description and icon.
Includes app icon and PWA install prompt styling adjustments.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "InfoGenius",
   "name": "InfoGenius Vision",
+  "description": "Visual Knowledge Engine fueled by Gemini",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2065/2065224.png",
@@ -15,6 +16,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
+  "orientation": "portrait",
   "theme_color": "#0f172a",
   "background_color": "#0f172a"
 }
